<resources>
    <string name="app_name">JustStudioApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- navigation drawer -->
    <string name="menu_home">Главная</string>
    <string name="menu_about">О студии</string>
    <string name="menu_services">Услуги и цены</string>
    <string name="menu_schedule">Расписание</string>
    <string name="menu_feedback">Отзывы</string>
    <string name="menu_contacts">Контакты</string>
    <!-- top app bar -->
    <string name="menu_notifications">Уведомления</string>
    <!-- bottom navigation -->
    <string name="menu_profile">Профиль</string>
    <!-- other fragments' labels -->
    <string name="menu_login">Вход</string>
    <string name="menu_register">Регистрация</string>

    <!-- Login Fragment -->
    <string name="login_fragment_text">Для доступа к профилю Вам необходимо войти в аккаунт</string>
    <string name="btn_login_label">Войти</string>
    <string name="email_label">Email</string>
    <string name="til_email_hint">example@mail.com</string>
    <string name="password_label">Пароль</string>
    <string name="register_link">Зарегистрироваться</string>
    <string name="forget_password_link">Забыли пароль?</string>
    <string name="msg_empty_auth">Введите имя пользователя и пароль</string>

    <!-- Register Fragment -->
    <string name="password_repeat_label">Повторите пароль</string>
    <string name="btn_register_label">Зарегистрироваться</string>

    <!-- Confirm Fragment -->
    <string name="code_label">Код</string>
    <string name="btn_confirm_label">Подтвердить</string>
    <string name="msg_confirm_code_sent">На указанную почту отправлен код подтверждения</string>

    <!-- Profile Fragment -->
    <string name="username_label">ФИО</string>
    <string name="phonenum_label">Номер телефона</string>
    <string name="dateofbirth_label">Дата рождения</string>
    <string name="gender_label">Пол</string>
    <string name="gender_male_label">М</string>
    <string name="gender_female_label">Ж</string>
</resources>