<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/aboutFragment"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/servicesFragment"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/scheduleFragment"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/feedbackFragment"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/contactsFragment"
            android:title="@string/menu_contacts" />
    </group>
</menu>